--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -95,3 +95,37 @@ nav.navbar {
     max-height: 250px;
     overflow-y: scroll;
 }
+
+// Login
+.hero.is-success {
+    background: #f2f6fa;
+}
+.hero .nav,
+.hero.is-success .nav {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.box {
+    margin-top: 5rem;
+}
+.avatar {
+    margin-top: -70px;
+    padding-bottom: 20px;
+}
+.avatar img {
+    padding: 5px;
+    background: #fff;
+    border-radius: 50%;
+    -webkit-box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1),
+        0 0 0 1px rgba(10, 10, 10, 0.1);
+    box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+}
+input {
+    font-weight: 300;
+}
+p {
+    font-weight: 700;
+}
+p.subtitle {
+    padding-top: 1rem;
+}
