--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11665,3 +11665,11 @@ p.subtitle {
   padding: 1.25em 0.5em;
 }
 
+@media screen and (min-width: 1088px) {
+  .navbar-item.has-dropdown {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
